[package]
name = "gokz_rs"
version = "0.23.2"
description = "CS:GO KZ in Rust."
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/gokz.rs"
license = "MIT"
publish = true

[features]
reqwest = ["dep:reqwest", "serde"]
serde = ["dep:serde", "dep:serde_json"]
chrono = ["dep:chrono"]
global-api = ["reqwest"]
kzgo-api = ["reqwest"]
schnose-api = ["reqwest"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "serde"]
optional = true

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.lazy_static]
version = "1.4"

[dependencies.regex]
version = "1.8"
default-features = false
features = ["std", "unicode-perl"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json", "serde_json"]
optional = true

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
default-features = false
features = ["std"]
optional = true

[dependencies.thiserror]
version = "1"

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["std", "attributes"]

[dev-dependencies]
pretty_assertions = "1.3.0"
