[package]
name = "gokz_rs"
version = "0.24.0"
description = "CS:GO KZ in Rust."
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/gokz.rs"
license-file = "./LICENSE"
publish = true

[features]
chrono = ["dep:chrono"]
serde = ["dep:serde", "dep:serde_json"]
reqwest = ["dep:reqwest", "serde"]

global-api = ["reqwest"]
kzgo-api = ["reqwest"]
schnose-api = ["reqwest"]

[dependencies]
thiserror = "1.0.44"
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["rustls"], optional = true }
chrono = { version = "0.4.26", features = ["serde"], optional = true }
serde = { version = "1.0.178", features = ["derive"], optional = true }
serde_json = { version = "1.0.104", optional = true }
lazy-regex = "3.0.1"

[dev-dependencies]
ctor = "0.2.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
pretty_assertions = "1.3.0"
