[package]
name = "gokz_rs"
version = "0.24.0"
description = "CS:GO KZ in Rust."
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/gokz.rs"
license-file = "./LICENSE"
publish = true

[features]
chrono = ["dep:chrono"]
serde = ["dep:serde", "dep:serde_json"]
reqwest = ["dep:reqwest", "serde"]
sqlx = ["dep:sqlx"]
poise = ["dep:poise"]

global-api = ["reqwest"]
kzgo-api = ["reqwest"]
# schnose-api = ["reqwest"]

[dependencies]
thiserror = "1"
tracing = "0.1"
lazy-regex = "3"

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.chrono]
optional = true
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
optional = true
version = "0.11"
features = ["rustls", "json"]

[dependencies.sqlx]
optional = true
version = "0.7"
default-features = false
features = ["macros", "all-databases"]

[dependencies.poise]
optional = true
version = "0.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
ctor = "0.2.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
color-eyre = "0.6.2"
tokio = { version = "1.29.1", features = ["full"] }
